--- a/css/innomiant.css
+++ b/css/innomiant.css
@@ -24,7 +24,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.77);
     z-index: 0; 
   }
   
@@ -58,13 +58,14 @@
   .pbanner-description {
     font-size: 1rem;
     margin-top: 15px;
-    color: #d3cdcd;
+    color: #FFFFFF;
   }
   
   .pbanner-list {
     margin-top: 20px;
     list-style-type: none;
     padding: 0;
+    color: #FFFFFF;
   }
   
   .pbanner-list li i{
@@ -631,7 +632,7 @@
     padding: 15px 25px;
     border: none;
     width: auto;
-    margin-top: -90px;
+    margin-top: -20px;
     margin-left: auto;
     margin-right: auto;
     display: block;
