--- a/css/changes.css
+++ b/css/changes.css
@@ -670,15 +670,15 @@
 
 /* Unique Background Images */
 .card-w-cards:nth-child(1)::before {
-  background-image: url('../images/about/wcu-one.png'); /* Replace with your actual image URL */
+  background-image: url('../images/wcu-c-1.webp'); 
 }
 
 .card-w-cards:nth-child(2)::before {
-  background-image: url('../images/about/wcu-2.png'); /* Replace with your actual image URL */
+  background-image: url('../images/wcu-c-2.webp'); 
 }
 
 .card-w-cards:nth-child(3)::before {
-  background-image: url('../images/about/wcu-3.png'); /* Replace with your actual image URL */
+  background-image: url('../images/about/wcu-3.png'); 
 }
 
 /* Content */
@@ -869,4 +869,54 @@
   .gocComp-text {
       font-size: 0.9rem;
   }
+}
+
+/* Define smooth animations */
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInDown {
+  from {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.slideInLeft {
+  animation-name: slideInLeft;
+}
+
+.slideInDown {
+  animation-name: slideInDown;
+}
+
+.slideInRight {
+  animation-name: slideInRight;
+}
+
+.animate__animated {
+  animation-timing-function: ease-in-out;
 }
