--- a/css/bautomate-main.css
+++ b/css/bautomate-main.css
@@ -100,6 +100,7 @@
   .heading {
     font-size: 2rem;
     margin-bottom: 10px;
+    line-height: 35px;
     animation: fadeInUp 1s ease-out forwards;
     animation-delay: 0.3s; /* Delay for smooth entry */
   }
@@ -190,6 +191,16 @@
     cursor: pointer;
     margin-left:20px;
   }
+  @media (min-width: 769px) and (max-width: 820px) {
+    .explore-btn {
+        margin-top: 15px;
+    }
+}
+@media (min-width: 821px) and (max-width: 1024px) {
+  .explore-btn {
+      margin-left: 60px;
+  }
+}
   
   .explore-btn:hover {
     background: linear-gradient(45deg, #b20d0c, #edb106);
@@ -315,7 +326,7 @@
     }
   
     .robot img {
-      width: 120px;
+      width: 240px;
     }
   
     .explore-btn {
@@ -369,7 +380,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 40px 20px;
+    padding: 30px 20px;
     color: white;
     opacity: 0; /* Start as hidden */
     animation: fadeInUp 1.5s ease-out forwards; /* Fade in and slide up for the section */
@@ -379,6 +390,8 @@
     font-size: 36px; /* Larger font size */
     font-weight: 700;
     margin: 0;
+    line-height: 32px;
+    padding-bottom:15px;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Text shadow */
     opacity: 0; /* Start as hidden */
@@ -388,7 +401,7 @@
   
   .headline-sub {
     font-size: 18px; /* Smaller font size */
-    margin: 15px 0;
+  
     color: white;
     line-height: 1.5;
     opacity: 0; /* Start as hidden */
@@ -425,7 +438,8 @@
   }
   @media (max-width: 480px) {
     .headline-main {
-        font-size: 24px; /* Smaller font size for mobile */
+        font-size: 30px; /* Smaller font size for mobile */
+        
     }
 
     .headline-sub {
@@ -554,7 +568,7 @@
   
   /* Section Styling */
   .intelligent-ecosystem {
-    padding: 30px 10px;
+    padding: 5px 10px;
     text-align: center;
     animation: fadeIn 1s ease-out;
   }
@@ -618,6 +632,7 @@
   .service h3 {
     font-size: 1.2rem;
     font-weight: 600;
+    line-height: 26px;
     color: #333;
     margin-top: 10px;
     transition: color 0.3s ease;
@@ -715,7 +730,6 @@ body {
     background-clip: text;
     color: transparent;
     text-align: center;
-    margin-bottom: 30px;
     margin-top:20px;
   }
   
@@ -728,12 +742,16 @@ body {
     padding: 10px 0;
   }
   
+  .abilities-para
+  {
+    margin-bottom:20px;
+  }
   .abilities-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; 
     margin-left: 30px;
-    max-width: 80%;
+    max-width: 100%;
     margin: auto;
     gap:20px;
    
@@ -743,7 +761,7 @@ body {
     display: flex;
     align-items: center;
     width: 35%;
-    padding: 15px;
+    padding: 5px;
     border-radius: 8px;
 
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -767,11 +785,16 @@ body {
     margin-right: 15px;
     font-size: 1.8rem;
   }
-  
+  .ability-item p
+  {
+    margin:0 0 0px;
+  }
  
- p {
+ .abilities-para{
     font-size: 1.1rem;
     color: white;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
  
@@ -827,7 +850,7 @@ body {
    /* Accreditation Section */
    .accreditation-partner {
     text-align: center;
-    padding: 40px 20px;
+    padding: 10px 20px;
     background-color: #141416;
 }
 
@@ -1119,7 +1142,7 @@ input:checked + .toggle-slider:before {
     font-weight: bold;
     padding-bottom: 30px;
     text-align: center;
-    padding-top:20px;
+   
     
 }
 
@@ -1130,6 +1153,10 @@ input:checked + .toggle-slider:before {
     color: transparent;
 }
 
+.testimonial-section
+{
+  margin-top: -70px;
+}
 .testimonial-container {
     display: flex;
     justify-content: center;
@@ -1156,14 +1183,14 @@ input:checked + .toggle-slider:before {
     font-weight: bold;
     text-align:center;
     margin-top:15px;
-    margin-bottom:10px;
+    margin-bottom:0px;
 }
 
 .testimonial-company {
     font-size: 1rem;
     color: #555;
     text-align:center;
-  
+   line-height: 20px;
     margin-bottom:20px;
 }
 
