--- a/css/intelligent-contract-management.css
+++ b/css/intelligent-contract-management.css
@@ -342,6 +342,9 @@ body{
   
   /* Quote Section */
   .quote-section {
+    background-image: url("../images/Bautomate/form-background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
       text-align: center;
       padding: 40px 20px;
   }
