--- a/css/product-item.css
+++ b/css/product-item.css
@@ -42,7 +42,7 @@
   
   .active-oee {
     color: transparent;
-    border-bottom: 2px solid white;
+    /* border-bottom: 2px solid white; */
     background-image: linear-gradient(45deg, #edb106, #b20d0c);
     -webkit-background-clip: text;
     background-clip: text;
