--- a/css/robotic-documented.css
+++ b/css/robotic-documented.css
@@ -965,6 +965,7 @@ background-clip: text;
 {
     text-align: center;
     font-size:40px;
+    padding-top:60px;
 }
 .highlight-core
 {
@@ -977,6 +978,7 @@ background-clip: text;
     display: flex;
     justify-content: space-between;
     padding: 40px;
+    padding-top:20px!important;
     max-width: 1200px;
     margin: auto;
 }
@@ -1229,4 +1231,9 @@ background-clip: text;
         margin-bottom: 15px;
     }
    
+}
+
+.Industries-robotics
+{
+    padding-top:60px;
 }
